fix: improve cancelbooking tests